--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "@expo/ex-navigation": "~2.10.0",
     "@expo/samples": "~1.0.3",
+    "dateformat": "^2.0.0",
     "expo": "16.0.0",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-16.0.0.tar.gz",
     "react-native-button": "^1.8.2",
-    "react-native-elements": "^0.11.2"
+    "react-native-elements": "^0.11.2",
+    "react-native-swipeout": "^2.0.13"
   },
   "devDependencies": {
     "jest-expo": "0.4.0"
